--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,9 @@
     <div>
         <!-- 这里对应的是thin的压缩包 -->
         <div class="misans">
-            <!-- 月日周一二三四五六甲乙丙丁戊己庚辛壬癸子丑寅卯辰巳午未申酉戌亥 -->
-            月日周一二三四五六甲乙丙丁戊己庚辛壬癸子丑寅卯辰巳午未申酉戌亥金木水火土｜今日美食沟通指南今日适宜今日忌讳
+            <!-- <div class="Fangzheng"> -->
+            月日周一二三四五六甲乙丙丁戊己庚辛壬癸子丑寅卯辰巳午未申酉戌亥主
+            月日周一二三四五六甲乙丙丁戊己庚辛壬癸子丑寅卯辰巳午未申酉戌亥金木水火土主｜今日美食沟通指南今日适宜今日忌讳日主
         </div>
     </div>
 </body>
